--- a/index.ipynb
+++ b/index.ipynb
@@ -213,8 +213,7 @@
    "outputs": [],
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
-    "    \n",
-    "    return {'m_values': m_values}"
+    "    return {'m_values': m_values,}"
    ]
   },
   {
