--- a/index.ipynb
+++ b/index.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "def rss_values(x_values, y_values, m_values, b):\n",
     "    return {'m_values': m_values,\n",
-    "           'rss_values': list(map(,m_values))}"
+    "           'rss_values': list(map(lambda el: residual_sum_squares(),m_values))}"
    ]
   },
   {
