--- a/index.ipynb
+++ b/index.ipynb
@@ -683,7 +683,7 @@
     "def gradient_descent(x_values, y_values, steps, b, learning_rate, current_m):\n",
     "    result : []\n",
     "    for i in range(:steps):\n",
-    "        "
+    "        result.append()"
    ]
   },
   {
